stop long links in referneces overflowing

--- a/style.css
+++ b/style.css
@@ -480,12 +480,10 @@ font-weight: bold;
 
 dl.refview {
 	margin:0px;
-	
 }
 dl.refview > dt:nth-child(1) {
 	color:red;
 	display:none;
-
 }
 
 dl.refview > dd:nth-child(2) {
@@ -496,16 +494,14 @@ dl.refview > dd:nth-child(2) {
 }
 dl.refview > dd {
 	margin-left:1.5em;
-
+	word-wrap: break-word;
 }
 
 @media only screen and (max-width: 480px) {
 body {
 	/*not sure if this is needed*/
 	-moz-text-size-adjust:none;	
-
 }	
-
 
 .HEADERBLOCK {
 }
